--- a/.github/workflows/iqiyi.yaml
+++ b/.github/workflows/iqiyi.yaml
@@ -3,7 +3,7 @@ name: 爱奇艺会员签到
 on:
     workflow_dispatch:
     schedule:
-        - cron: ""
+        - cron: "0 22,14 * * *"
     watch:
         types: [started]
 
